# shitpost

./: .gitignore  Cargo.toml  LICENSE.txt  PKGBUILD  README.md  shitpost.service  shitpost.toml
src/: main.rs
src/commands/: cope.rs  image.rs  mod.rs  reddit.rs
