[package]
name = "shitpost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
roux = "2.2"
rand = "0.8"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "cache"
]