[package]
name = "shitpost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
roux = "2.2"
rand = "0.8"
image = "0.24"
mime = "0.3"
reqwest = "0.11"
anyhow = "1"

[dev-dependencies]
rusty-hook = "0.11"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "cache"
]