[package]
name = "shitpost"
version = "0.1.0"
edition = "2021"
authors = ["Stuart <stu@reilly-family.co.uk>"]
description = "Discord shitposting bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
roux = "2.2"
rand = "0.8"
image = "0.24"
mime = "0.3"
reqwest = "0.11"
anyhow = "1"
poise = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["env", "toml"] }
directories = "4.0"
serde = "1"

[dev-dependencies]
rusty-hook = "0.11"